--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@
     <title>Contct filr</title>
 </head>
 <body>
-    <h3>Yr contact filr hj theel ha na smb aa gfa</h3>
+    <h3>Thsi file is fixed by prateek on feature1 branch</h3>
 </body>
 </html>
